Fix archive on iphone

--- a/client/src/Pages/PatchArchive/PatchArchive.css
+++ b/client/src/Pages/PatchArchive/PatchArchive.css
@@ -224,9 +224,9 @@
     }
 
     .märke {
-        width: 47%;
+        width: 45%;
         height: 280px;
-        margin: 5px;
+        margin: 3px;
     }
 
     .märke .head {
